Virtual_mchine/Child_module/Networ_security_group/main.tf
resource "azurerm_network_security_group" "nsg_name" {
  name                = var.nsg_name
  location            = var.rg_location
  resource_group_name = var.rg_name

  security_rule {
    name                       = "Allow-SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "Allow-RDP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  
}
resource "azurerm_network_interface_security_group_association" "nsgassoc" {
  network_interface_id      = data.azurerm_network_interface.nicdata.id
  network_security_group_id = azurerm_network_security_group.nsg_name.id
  
}
